# sentry-psid8

./: .gitignore  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  LICENSE  PUBLISHING.md  README.md  THESIS_NOTES.md  codemeta.json  integrity_report.json  manifest.json  pyproject.toml  requirements.txt  schema_test.json  splits.json  versions.json
configs/: sentry_base.yaml
notebooks/: KAGGLE_WORKFLOW.md  sentry_kaggle.ipynb
protocol/: PREREGISTRATION.md
psid8/: ANNOTATION_GUIDE.md  openvocab_prompts.json  openvocab_prompts_ucf.json  schema.json  schema.py  ucfcrime_mapping.json
psid8/scripts/: agreement.py  build_splits.py  coco_to_yolo.py  curate_clips.py  dataset_stats.py  integrity_check.py  le2i_to_clips.py  schema_to_cvat.py  ucf_extract_test_frames.py
sentry/: __init__.py  aggregate.py  data.py  eval.py  losses.py  metrics.py  modules.py  plots.py  seeds.py  stageb_train.py  train.py  tubes.py  ultralytics_adapter.py
sentryc/: __init__.py  alerts.py  gnn_correlation.py  graph_builder.py  metrics.py  network_stream.py
tests/: run_tests.py  test_psid8_scripts.py  test_schema.py  test_sentryc.py  test_train.py  test_ultralytics_adapter.py
