[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-psid8"
version = "0.3.0"
description = "SENTRY spatiotemporal incident detector + PSID-8 benchmark toolkit"
requires-python = ">=3.10"
dependencies = ["numpy", "pyyaml"]

[tool.setuptools.packages.find]
include = ["sentry*", "psid8*"]
